tests/miniJava/neg/000183_mutation.MiniJava
class java { public static new void Main ( String [ ] java ) { { } } }
